--- a/session10/DOM2_Assignment-2/todo_app.html
+++ b/session10/DOM2_Assignment-2/todo_app.html
@@ -16,7 +16,7 @@
             <span class="addBtn" onclick="add()">Add</span>
         </div>
         <h3>MY TASKS</h3>
-        <ul id="myList">
+        <ul class="checked" id="myList">
            
         </ul>
     </div>
